    ADDED: Possibility to choose one of five sorting methods (thanks to Jacek Jaworski)
    ADDED: compare by content for search / locate
    ADDED: New mouse selection mode
    ADDED: Evolution can be used as the default e-mail sender (thanks to Agustin Henze)
    ADDED: enqueue operation for copy / move
    ADDED: Konfigurator mouse selection mode: Possibility to select a predefined
           mode and change a detail. 
    ADDED: [ 1704953 ] highlight quick search match
    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: When neither "kompare", "kdiff3" nor "xxdiff" in PATH, the program set in
           "diff utility" was ignored. Under Windows, look for them with ".exe" suffix
    FIXED: [ 2243628 ] Synchronizer overlooks files
    FIXED: [ 2202522 ] newly created hidden files are shown for a short time
    FIXED: calc space doesn't work on remote file systems
    FIXED: searcher doesn't start because of corrupt config files
    FIXED: Konfigurator doesn't detect every mimetype for "zip" files
    FIXED: Konfigurator keeps its original size
    FIXED: Konfigurator has scrollbars if necessary.
    FIXED: [ 2027518 ] Does not build with -DBUILD_SHARED_LIBS:BOOL=ON
           (thanks to Funda Wang)
    FIXED: [ 2041732 ] Krusader 2.0.0 beta1 missing title bar under Compiz
           (thanks to Danny Baumann for the patch)
    FIXED: [ 2023623 ] Krusader kept running after closing the main window
    FIXED: [ 1671543 ] horizontal/vertical mode fix in the Window menu
    FIXED: [ 1845105 ] mimetype magic can be disabled again
    FIXED: [ 2062651 ] Ctrl+Up selects the URL in the origin editbox