@@ -993,6 +993,7 @@ void KrBriefView::initProperties() {
 	QStringList defaultAtomicExtensions;
 	defaultAtomicExtensions += ".tar.gz";
 	defaultAtomicExtensions += ".tar.bz2";
+	defaultAtomicExtensions += ".tar.lzma";
 	defaultAtomicExtensions += ".moc.cpp";
 	QStringList atomicExtensions = grpSvr.readEntry("Atomic Extensions", defaultAtomicExtensions);
 	for (QStringList::iterator i = atomicExtensions.begin(); i != atomicExtensions.end(); )
