@@ -1,3 +1,4 @@
+    ADDED: Krusader support for tar.lzma (KDE's tar protocol doesn't support it yet)
     ADDED: Possibility to choose one of five sorting methods (thanks to Jacek Jaworski)
     ADDED: compare by content for search / locate
     ADDED: New mouse selection mode
